--- a/Controls/GmesInfoControl.xaml
+++ b/Controls/GmesInfoControl.xaml
@@ -88,6 +88,7 @@
                                           Grid.Column="0"
                                           Height="28" 
                                           FontSize="11"
+                                          VerticalContentAlignment="Center"
                                           DisplayMemberPath="DisplayText"
                                           Margin="0,0,5,0"
                                           SelectionChanged="SiteComboBox_SelectionChanged"
@@ -315,6 +316,7 @@
                             <ComboBox x:Name="QuerySelectComboBox" 
                                       Grid.Column="0"
                                       Height="32"
+                                      VerticalContentAlignment="Center"
                                       DisplayMemberPath="QueryName"
                                       Margin="0,0,5,0"/>
       
