--- a/Controls/GmesInfoControlNew.xaml
+++ b/Controls/GmesInfoControlNew.xaml
@@ -42,6 +42,7 @@
                                   Grid.Column="0"
                                   Height="28" 
                                   FontSize="11"
+                                  VerticalContentAlignment="Center"
                                   DisplayMemberPath="DisplayText"
                                   Margin="0,0,5,0"
                                   SelectionChanged="SiteComboBox_SelectionChanged"
@@ -442,6 +443,7 @@
                                 <ComboBox x:Name="QuerySelectComboBox" 
                                           Width="300"
                                           Height="32"
+                                          VerticalContentAlignment="Center"
                                           DisplayMemberPath="QueryName"
                                           Margin="0,0,5,0"
                                           VerticalAlignment="Center"/>
