--- a/Controls/LogAnalysisControl.xaml
+++ b/Controls/LogAnalysisControl.xaml
@@ -132,6 +132,7 @@
                               Width="300" 
                               Height="32"
                               VerticalAlignment="Center"
+                              VerticalContentAlignment="Center"
                               IsEditable="True"
                               IsReadOnly="True"
                               Margin="0,0,20,5"
@@ -154,6 +155,7 @@
                               Width="300" 
                               Height="32"
                               VerticalAlignment="Center"
+                              VerticalContentAlignment="Center"
                               DisplayMemberPath="Text"
                               Margin="0,0,0,5"/>
                 </WrapPanel>
